# smart_max_slippage

./: README.md
front-end/: index.html  package-lock.json  package.json
front-end/src/: main.ts  setupWidget.ts
time_series_forecast/: .dockerignore  docker-compose.yaml  dockerfile  main.py  pyproject.toml
time_series_forecast/analytics/: analytics.py  wip.ipynb
time_series_forecast/app/: __init__.py
time_series_forecast/app/forecast/: __init__.py  forecast.py  routes.py
time_series_forecast/app/index/: __init__.py
time_series_forecast/training/: response_1700252617876.json  wip.ipynb
