[tool.poetry]
name = "app"
version = "0.1.0"
description = "A time series forecast for token slippage"
authors = ["ericyangch@hotmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pmdarima = "^2.0.3"
flask = "^2.3.3"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"
prometheus-flask-exporter = "^0.22.4"
lru-dict = "^1.2.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.0"
numpy = "^1.25"
pandas = "^2.0"


[tool.poetry.group.perf.dependencies]
locust = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"